--- a/JRNL80/style.css
+++ b/JRNL80/style.css
@@ -1,1 +1,21 @@
 
+/* Fonts from Google Fonts - more at https://fonts.google.com */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import url('https://fonts.googleapis.com/css?family=Merriweather:400,700');
+@import url('https://fonts.googleapis.com/css?family=Slabo+27px');
+body {
+  background-color: white;
+  font-family: "Slabo 27px", sans-serif;
+  padding: 5px 25px;
+  font-size: 18px;
+  margin: 0;
+  color: #444;
+}
+
+h1 {
+  font-family: "Arial", serif;
+  font-size: 42px; 
+  color: black;
+}
+ul { color:black;
+}
